Improved the check mechanism for external handles.
refs #4458